<resources>
    <string name="app_name">Pregnancy Weight Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_user_list">Family</string>
    <string name="title_activity_tracker_help">Help / Instructions</string>
    <string name="title_activity_user_slideshow">Slides</string>
    <string name="title_activity_app_feedback">Share feedback</string>
    <string name="title_activity_add_user_reading">Add/Edit Reading</string>
    <string name="title_activity_add_user_first_reading">Add/Edit First Reading</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_what_is_new">What\'s New?</string>
    <string name="title_activity_collage_template_chooser">Select template</string>
    <string name="title_activity_collage_preview">Preview</string>
    <string name="add_user_first_reading_lmp_date_label">Last Menstrual Period *</string>
    <string name="image_bump_label">Bump photo</string>
    <string name="image_baby_label">Photo</string>
    <string name="bump_desc_label">Tap to change photo</string>
    <string name="gender_desc_label">Tap to change gender</string>
    <string name="reading_measured_date_label">Measured on</string>
    <string name="reading_period_week_label">Week *</string>
    <string name="reading_period_month_label">Month *</string>
    <string name="reading_pending_weeks_label">Missing readings</string>
    <string name="weight_label">Weight</string>
    <string name="reading_weight_unit_label">Weight Unit *</string>
    <string name="reading_unit_desc_label">One time setting</string>
    <string name="weight_unit_kg">kgs</string>
    <string name="weight_unit_lbs">lbs</string>
    <string name="reading_head_circum_unit_label">Head Circumference Unit *</string>
    <string name="reading_height_unit_label">Height Unit *</string>
    <string name="height_unit_cms">cms</string>
    <string name="height_unit_inches">inches</string>
    <string name="height_label">Height</string>
    <string name="head_circum_label">Head Circumference</string>
    <string name="user_name_hint">(nick name)</string>
    <string name="dob_label">Date Of Birth</string>
    <string name="reminder_label">Enable reminder</string>
    <string name="reminder_period_label">Remind on every</string>
    <string name="reminder_time_label">Remind at</string>
    <string name="sequence_label">Reading for</string>
    <string name="empty_view_title_message">(No data found.)</string>
    <string name="help_record_image">Bump</string>
    <string name="help_record_period">Period</string>
    <string name="help_record_date">Date</string>
    <string name="help_record_weight_message">Actual Wt</string>
    <string name="help_record_wt_diff_message">(wt gain)</string>
    <string name="help_record_exp_min_wt_message">Exp Min</string>
    <string name="help_record_wt_diff_against_actual_message">(v/s actual)</string>
    <string name="help_record_exp_max_wt_message">Exp Max</string>
    <string name="application_version_label">Application version (code)</string>
    <string name="application_version_friendly_name_label">Codename</string>
    <string name="architecture_label">Architecture</string>
    <string name="available_memory_label">Available memory</string>
    <string name="battery_level_label">Battery level</string>
    <string name="locale_label">Locale</string>
    <string name="model_label">Model</string>
    <string name="android_version_label">Android version</string>
    <string name="processor_count_label">Processor count</string>
    <string name="display_density">Display Density</string>
    <string name="WeekNReadingSavedMessage">Week %d reading saved.</string>
    <string name="WeekNReadingRemovedMessage">Week %d reading removed.</string>
    <string name="MonthNReadingSavedMessage">Month %d reading saved.</string>
    <string name="MonthNReadingRemovedMessage">Month %d reading removed.</string>
    <string name="EditDeliveryReadingMessage">Edit Delivery Reading</string>
    <string name="EditPrePregnancyReadingMessage">Edit Pre-pregnancy Reading</string>
    <string name="EditReadingMessage">Edit Reading</string>
    <string name="AddPrePregnancyReadingMessage">Add Pre-pregnancy Reading</string>
    <string name="AddDeliveryReadingMessage">Add Delivery Reading</string>
    <string name="AddReadingMessage">Add Reading</string>
    <string name="ImageNotPickedMessage">You haven\'t picked Image</string>
    <string name="CouldNotProcessImageMessage">Unable to process image request</string>
    <string name="PrePregnancyReadingRemovalError">Pre-pregnancy reading cannot be removed</string>
    <string name="PrePregnancyReadingRemovalErrorMessage">First reading (week 0) is used to calculate expected range.</string>
    <string name="ReadingRemovalConfirmation">Confirm removal</string>
    <string name="ReadingRemovalConfirmationMessage">Are you sure you want to remove this reading?</string>
    <string name="ReadingNoteHintMessage"><![CDATA[<small>[add notes, your feelings, your thoughts or talk to baby]</small>]]></string>
    <string name="WeekNumberMessage">Week Number</string>
    <string name="MonthNumberMessage">Month Number</string>
    <string name="WeeksMessage">week(s)</string>
    <string name="MonthsMessage">month(s)</string>
    <string name="MaximumNWeeksDataSupportedMessage">App supports only 40 weeks of pregnancy readings, additional readings cannot be added.</string>
    <string name="MaximumNMonthsDataSupportedMessage">App supports only 36 months of infant growth readings, additional readings cannot be added.</string>
    <string name="SuggestReadingBeyondDeliveryDueDateMessage">Suggested week is %d, App supports only 40 weeks of pregnancy.\nCorrect delivery due date, if delivery delayed.</string>
    <string name="SuggestReadingBeyondSupportedDataMessage">Suggested month is %d, App supports only 36 months of infant growth data.</string>
    <string name="menu_user_detail_media">Media</string>
    <string name="user_media_slideshow_label">Preview</string>
    <string name="user_media_bkgnd_music_label">Set Background Music</string>
    <string name="user_media_collage_label">Collage</string>
    <string name="slideshow_empty_note_message">[add notes, your feelings, your thoughts or talk to baby]</string>
    <string name="slideshow_week_number_format">Week %d</string>
    <string name="user_readings_not_found_message">No data found.</string>
    <string name="user_readings_add_user_message">Add family member(s) using \'+\' button below.</string>
    <string name="user_readings_add_reading_message">Add reading(s) using \'+\' button below.</string>
    <string name="user_detail_activity_title">My Wonderful Pregnancy</string>
    <string name="background_audio_not_set_message">Background music not set.</string>
    <string name="background_audio_not_found_message">Background audio file not found. Select again.</string>
    <string name="app_share_line_2">\nSimple and Smart way of tracking weekly pregnancy weight gain with expected weight range suggestions.</string>
    <string name="app_share_line_3">\n\nIt also helps capture your memorable pregnancy moments and innovatively makes a \'My Wonderful Pregnancy\' experience.</string>
    <string name="app_share_line_4">\n\nGive it a try !!!</string>
    <string name="app_feedback_message">Please let us know your feedback about app. Like, what you like or do not like? what more feature(s) you would like to see in app? etc</string>
    <string name="app_share_label">Share</string>
    <string name="app_rate_label">Like</string>
    <string name="app_feedback_label">Feedback</string>
    <string name="app_feedback_thanks_message">Thank you for your valuable feedback !!!</string>
    <string name="app_feedback_error_message">Some problem sending feedback. Try later.</string>
    <string name="app_feedback_hint_message">[your feedback]</string>
    <string name="home_app_introduction_message">Smart and Simple. \nCapture special pregnancy moments. \nExperience \'My Wonderful Pregnancy\'.</string>
    <string name="home_app_disclaimer_label">Disclaimer</string>
    <string name="home_app_disclaimer_message">This App is for making user\'s pregnancy (and also monitoring baby\'s growth) a wonderful experience by making use of information and data that user provide in the App. The calculations are indicative and may vary from person to person. App is not approved or sponsored by medical professionals. Always raise any and all questions or concerns about your pregnancy with your doctor. App do not share user\'s personal data outside of this app, except for troubleshooting if any issue occurs, so that user can seamlessly use the app.</string>
    <string name="notification_pregnancy_title">%s - Pregnancy weight reading</string>
    <string name="notification_infant_title">%s - Infant growth reading</string>
    <string name="notification_pregnancy_message">Touch to record %d week pregnancy weight.</string>
    <string name="notification_infant_message">Touch to record %d month growth.</string>
    <string name="delivery_due_date_label">Delivery Due Date</string>
    <string name="delivery_have_twins_label">Pregnant with twins?</string>
    <string name="delivery_remaining_days_label">Remaining</string>
    <string name="delete_user_warning_message">User data will be lost permanently. Do you want to continue?</string>
    <string name="delete_user_warning_title">Confirm stop tracking</string>
    <string name="value_not_set_message">Not set</string>
    <string name="add_user_weekly_reminder_text">Remind Weekly?</string>
    <string name="add_user_monthly_reminder_text">Remind Monthly?</string>
    <string name="add_user_name_text">Name</string>
    <string name="add_user_dob_text">Date Of Birth</string>
    <string name="add_user_gender_text">Gender</string>
    <string name="add_user_reminder_dow_text">Day of Week</string>
    <string name="add_user_reminder_dom_text">Day of Month</string>
    <string name="add_user_reminder_tod_text">Time of Day</string>
    <string name="user_details_weekly_reminder_text">Weekly Reminder</string>
    <string name="user_details_monthly_reminder_text">Monthly Reminder</string>
    <string name="user_detail_prepreg_summary_label">Pre Pregnancy Summary</string>
    <string name="user_detail_prepreg_bmi_label">BMI - Category</string>
    <string name="user_detail_prepreg_lmp_label">Last Menstrual Period</string>
    <string name="user_detail_remove_btn_label">Remove</string>
    <string name="user_details_updated_message">Profile updated</string>
    <string name="user_added_message">Welcome and Congratulations</string>
    <string name="splash_activity_version_format">Version: %s</string>
    <string name="app_update_title">Upgrade Available</string>
    <string name="app_update_message">A new version of the App is available now.\\n\\nWould you like to upgrade now?</string>
    <string name="app_update_positive_label">UPGRADE</string>
    <string name="app_update_negative_label">NEXT TIME</string>
    <string name="pre_pregnancy_label">Pre-pregnancy</string>
    <string name="delivery_label">Delivery</string>
    <string name="add_conflicting_week_message">Suggested current week is %d. But this Reading is already added. What you want to do?</string>
    <string name="add_conflicting_week_title">Conflicting Week Reading</string>
    <string name="delivery_due_date_required_message">Must set \'Delivery Due Date\' for accuracy of current week suggestion.</string>
    <string name="delivery_due_date_required_title">Delivery Date Not Set</string>
    <string name="save_label">Save</string>
    <string name="add_label">Add</string>
    <string name="edit_label">Edit</string>
    <string name="no_label">No</string>
    <string name="cancel_label">Cancel</string>
    <string name="send_label">Send</string>
    <string name="feedback_max_length_label">max 500</string>
</resources>