<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    >
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:rowCount="10"
        android:columnCount="2"
        android:orientation="horizontal">

        <TableRow
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="2"
                android:gravity="center"
                >
                <ImageButton
                    android:id="@+id/add_user_image_button"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="2"
                    android:scaleType="fitCenter"
                    android:gravity="center"
                    android:src="@drawable/splash"
                    android:background="@android:color/transparent"
                    android:layout_span="3">
                </ImageButton>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textSize="10dp"
                    android:text="@string/bump_desc_label"/>
            </LinearLayout>
        </TableRow>
        <TableRow
            android:layout_weight="1"
            android:layout_marginBottom="5dp">
            <TextView
                android:id="@+id/add_user_name_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="@string/add_user_name_text"/>
            <EditText
                android:id="@+id/add_user_name_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textCapWords"
                android:singleLine="true"
                android:maxLength="15"
                android:hint="(nick name)"/>
        </TableRow>
        <TableRow
            android:id="@+id/add_user_dob_section"
            android:layout_weight="1"
            android:layout_marginBottom="5dp">
            <TextView
                android:id="@+id/add_user_dob_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="@string/add_user_dob_text"/>
            <Button
                android:id="@+id/add_user_dob_button"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="left|center"
                android:paddingLeft="10dp"
                android:background="@drawable/background_button"
                android:text="dd/mm/yyyy" />
        </TableRow>
        <TableRow
            android:id="@+id/add_user_gender_section"
            android:layout_weight="1"
            android:layout_marginBottom="5dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">
                <TextView
                    android:id="@+id/add_user_gender_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:text="@string/add_user_gender_text"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="10dp"
                    android:text="@string/gender_desc_label"/>
            </LinearLayout>
            <ToggleButton
                android:id="@+id/add_user_gender_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:drawableLeft="@drawable/gender_selector"
                android:textOff=""
                android:textOn="" />
        </TableRow>
        <View
            android:id="@+id/add_user_delivery_section_divider"
            style="@style/Divider"/>
        <TableRow
            android:id="@+id/add_user_delivery_twins_section"
            android:layout_weight="1"
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:text="@string/delivery_have_twins_label"/>
            <android.support.v7.widget.SwitchCompat
                android:id="@+id/add_user_have_twins_checkbox"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="0.3"
                android:layout_gravity="left|center"/>
            <Button
                android:id="@+id/add_user_have_twins_button"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="0.7"
                android:background="@android:color/transparent"
                android:layout_gravity="left|center"
                android:text="@string/no_label"/>
        </TableRow>
        <TableRow
            android:id="@+id/add_user_delivery_due_section"
            android:layout_weight="1"
            android:layout_marginBottom="5dp">
            <TextView
                android:id="@+id/add_user_delivery_due_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="@string/delivery_due_date_label"/>
            <Button
                android:id="@+id/add_user_delivery_due_button"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="left|center"
                android:paddingLeft="10dp"
                android:background="@drawable/background_button"
                android:text="(Due Date)" />
        </TableRow>
        <View style="@style/Divider"/>
        <TableRow
            android:layout_weight="1"
            android:layout_marginBottom="5dp">
            <TextView
                android:id="@+id/add_user_remind_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:text="@string/add_user_weekly_reminder_text"/>
            <android.support.v7.widget.SwitchCompat
                android:id="@+id/add_user_remind_checkbox"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="0.3"
                android:layout_gravity="left|center"/>
            <Button
                android:id="@+id/add_user_remind_message_button"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="0.7"
                android:background="@android:color/transparent"
                android:layout_gravity="left|center"
                android:text="No"/>
        </TableRow>
        <TableRow
            android:id="@+id/add_user_reminder_day_section"
            android:layout_weight="1"
            android:layout_marginBottom="5dp">
            <TextView
                android:id="@+id/add_user_reminder_day_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="@string/add_user_reminder_dow_text"/>
            <Button
                android:id="@+id/add_user_reminder_day_button"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="left|center"
                android:text="SUNDAY"
                android:paddingLeft="10dp"
                android:background="@drawable/background_button"
                />
            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/add_user_reminder_day_spinner"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="left"
                android:spinnerMode="dialog"
                android:paddingLeft="10dp"
                android:background="@drawable/background_button"
                />
        </TableRow>
        <TableRow
            android:id="@+id/add_user_reminder_time_section"
            android:layout_weight="1"
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="@string/add_user_reminder_tod_text"/>
            <Button
                android:id="@+id/add_user_reminder_time_button"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="left|center"
                android:paddingLeft="10dp"
                android:background="@drawable/background_button"
                android:text="hh:mm" />
        </TableRow>
        <View style="@style/Divider"/>
        <TableRow
            android:id="@+id/add_user_ok_action_section"
            android:layout_weight="1"
            android:layout_marginBottom="5dp">
            <Button
                android:id="@+id/add_user_save_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:background="@drawable/round_shape_button"
                android:textSize="25sp"
                android:text="@string/add_label"/>
        </TableRow>
    </TableLayout>
</ScrollView>