<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.mk.familyweighttracker.HomeActivity"
    android:orientation="vertical"
    android:background="@drawable/background">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tool_bar_home"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/home_app_logo"
                    android:layout_width="220dip"
                    android:layout_height="220dip"
                    android:src="@drawable/logo_app"
                    android:scaleType="fitCenter"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dip"/>

                <TextView
                    android:id="@+id/home_app_intro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textSize="13sp"
                    android:textAlignment="center"
                    android:text="@string/home_app_introduction_message"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:padding="5dip">

                <TextView
                    android:id="@+id/home_app_disclaimer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dip"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_red_light"
                    android:textAlignment="center"
                    android:text="@string/home_app_disclaimer_label"/>

                <TextView
                    android:id="@+id/home_app_disclaimer_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dip"
                    android:gravity="center"
                    android:textSize="11sp"
                    android:text="@string/home_app_disclaimer_message"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <TextView
        android:id="@+id/home_app_disclaimer_ok"
        android:layout_width="80dip"
        android:layout_height="40dip"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="4dp"
        android:textSize="15sp"
        android:textColor="@color/app_social_button_text"
        android:background="@drawable/pink_border_circle"
        android:text="@string/start_label" />
</LinearLayout>
